--- a/homepage_music.html
+++ b/homepage_music.html
@@ -1,8 +1,39 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    body { 
+      margin: 0; 
+      height: 100vh;
+      /* 透明点击激活层（用户无感知） */
+      background: rgba(0,0,0,0.001);
+      cursor: pointer;
+    }
+    #player {
+      display: none !important;
+    }
+  </style>
+</head>
 <body>
-<audio autoplay loop controls style="display:none;">
-  <source src="https://dlink.host/musics/aHR0cHM6Ly9vbmVkcnYtbXkuc2hhcmVwb2ludC5jb20vOnU6L2cvcGVyc29uYWwvc3Rvcl9vbmVkcnZfb25taWNyb3NvZnRfY29tL0ViQlBHX05NOFNSRW1yb1lIbUVlbk5nQjhnTjljMkhRUTltb0w3b3BUZTVzUFE.mp3" type="audio/mpeg">
-</audio>
+  <audio id="player" loop>
+    <source src="https://dlink.host/.../music.mp3" type="audio/mpeg">
+  </audio>
+
+  <script>
+    // 首次点击页面触发播放（用户无感知）
+    document.body.onclick = () => {
+      const audio = document.getElementById('player');
+      audio.play().catch(e => console.log('播放已激活'));
+      // 移除点击监听（避免重复触发）
+      document.body.onclick = null;
+      // 恢复默认光标
+      document.body.style.cursor = 'default';
+    };
+    
+    // 尝试静默自动播放（部分浏览器支持）
+    window.onload = () => {
+      document.getElementById('player').play().catch(() => {});
+    };
+  </script>
 </body>
 </html>
